--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -35,8 +35,8 @@
           </div>
           <div>
             <ion-item lines="none">
-              <ion-input formControlName="loginUser" placeholder="usuario@tucorreo.cl" type="text"
-                required></ion-input>
+              <ion-input formControlName="loginUser" placeholder="usuario" type="text" required>
+              </ion-input>
             </ion-item>
             <ion-item class="ion-margin-top" lines="none">
               <ion-input formControlName="loginPassword" [type]="isTextFieldType ? 'text' : 'password'"
