--- a/src/app/pages/inicio/inicio.page.html
+++ b/src/app/pages/inicio/inicio.page.html
@@ -7,7 +7,7 @@
 <ion-content [fullscreen]="true">
 <section>
   <h2 class="ion-text-center">Bienvenido!</h2>
-  <h4 *ngIf="currentUser !== null">Usuario: {{currentUser}}</h4>
+  <h4 *ngIf="currentUser !== null" style="margin-left: 20px;">Usuario: {{currentUser}}</h4>
 </section>
 <section>
   <form class="ion-margin-top ion-padding-top" [formGroup]="welcomeForm" (ngSubmit)="onUserInfo()">
@@ -19,13 +19,13 @@
           </div>
           <div>
             <ion-item lines="none">
-              <ion-input label="Nombre" formControlName="nameWelcome" placeholder="Ingrese su nombre" type="text" required></ion-input>
+              <ion-input label="Nombre" formControlName="nombre" placeholder="Ingrese su nombre" type="text" required></ion-input>
             </ion-item>
             <ion-item lines="none">
-              <ion-input label="Apellido" formControlName="lastNameWelcome" placeholder="Ingrese su apellido" type="text" required></ion-input>
+              <ion-input label="Apellido" formControlName="apellido" placeholder="Ingrese su apellido" type="text" required></ion-input>
             </ion-item>
             <ion-item lines="none">
-              <ion-select label="Nivel de educacion" placeholder="Ingrese su nivel de educacion" formControlName="edLvlWelcome">
+              <ion-select label="Nivel de educacion" placeholder="Ingrese su nivel de educacion" formControlName="nivelEd">
                 <ion-select-option value="postgrado">PostGrado</ion-select-option>
                 <ion-select-option value="pregrado">PreGrado</ion-select-option>
                 <ion-select-option value="universitaria">Universitaria</ion-select-option>
@@ -34,13 +34,19 @@
               </ion-select>
             </ion-item>
             <ion-item lines="none">
-              <!-- <ion-input label="Fecha de nacimiento" formControlName="fecNacWelcome" placeholder="Ingrese su nivel de educacion" type="text" required></ion-input> -->
               <ion-label>Fecha de nacimiento</ion-label>
-              <input label="Fecha de nacimiento" formControlName="fecNacWelcome" placeholder="Ingrese su nivel de educacion" type="date">
+              <!-- <input label="Fecha de nacimiento" formControlName="fecNac" placeholder="Ingrese su nivel de educacion" type="date"> -->
+              <mat-form-field>
+                <mat-label>Seleccionar fecha</mat-label>
+                <input matInput [matDatepicker]="picker">
+                <mat-hint>MM/DD/YYYY</mat-hint>
+                <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+                <mat-datepicker #picker></mat-datepicker>
+              </mat-form-field>
             </ion-item>
           </div>
           <div class="ion-margin-top ion-padding-top">
-              <ion-button type="button" class="" color="secondary" size="" expand="block">Limpiar</ion-button>
+              <ion-button type="reset" value="Borrar" class="" color="secondary" size="" expand="block">Limpiar</ion-button>
               <ion-button type="submit" class="" color="secondary" size="" expand="block">Mostrar</ion-button>
           </div>
         </ion-col>
@@ -48,9 +54,4 @@
     </ion-grid>
   </form>
 </section>
-<footer>
-  <ion-toolbar>
-    <ion-title>App desarrollado por: Mati</ion-title>
-  </ion-toolbar>
-</footer>
 </ion-content>
